Added changes to address and counter RWAlwaysDisplayFullNavigation : true and show sibling and parent ul's of current links in the vertical toolbar.

--- a/styles.css
+++ b/styles.css
@@ -271,6 +271,7 @@ nav.toolbar3 ul li a:hover {
 nav.toolbar3 ul ul {
 	background: transparent;
 	border-style: none;
+	display: none;/* counter RWAlwaysDisplayFullNavigation : true */
 	margin-bottom: 0;
 }
 nav.toolbar3 ul ul a {
